# JobFinder

./: .env.example  .gitignore  PROGRESS.md  RALPH.md  README.md  pyproject.toml  ralph.sh  requirements.txt
.github/workflows/: ci.yml
config/: companies.yaml.example  profile.yaml.example  weights.yaml.example
spec/: hld.md  lld.md  spec.md  tasks.md
src/jobfinder/: __init__.py  __main__.py  cli.py  discovery.py  filters.py  logging_setup.py  models.py  normalize.py  pipeline.py  score.py  settings.py  sheets.py  store.py
src/jobfinder/sources/: __init__.py  adzuna.py  ashby.py  base.py  greenhouse.py  http.py  jsearch.py  lever.py  remotive.py  themuse.py
src/jobfinder/web/: __init__.py  api.py  app.py  schemas.py
src/jobfinder/web/static/: app.js  index.html  styles.css
tests/: __init__.py  conftest.py  test_api.py  test_cli.py  test_discovery.py  test_filters.py  test_http.py  test_logging_setup.py  test_models.py  test_normalize.py  test_pipeline.py  test_score.py  test_settings.py  test_sheets.py  test_sources.py  test_store.py
tests/fixtures/: adzuna_search.json  ashby_jobs.json  greenhouse_jobs.json  jsearch_search.json  lever_postings.json  remotive_jobs.json  resume.docx  resume.md  resume.txt  sheets_metadata.json  sheets_values.json  themuse_jobs.json
tests/fixtures/config/: companies.yaml  profile.yaml  profile_invalid.yaml  weights.yaml  weights_invalid.yaml
