[project]
name = "jobfinder"
version = "0.1.0"
description = "Local, single-user tool that discovers, filters and ranks recent backend software-engineering job postings from public ATS feeds."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Peter Mark" }]
# Runtime dependencies are added per-task with `uv add` (see RALPH.md). The full
# pinned target set lives in requirements.txt (LLD §14); each entry is pulled in
# as the task that first imports it lands. T01 only needs the CLI framework so the
# `jobfinder` entry point imports and `--help` works.
dependencies = [
    "httpx[http2]>=0.27,<1.0",
    "pydantic>=2.6,<3.0",
    "pydantic-settings>=2.2,<3.0",
    "pyyaml>=6.0,<7.0",
    "selectolax>=0.3,<0.4",
    "typer>=0.12,<1.0",
]

[project.scripts]
jobfinder = "jobfinder.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/jobfinder"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
# E/W pycodestyle, F pyflakes, I import-sort, UP pyupgrade, B bugbear.
select = ["E", "W", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
